			SWI-Prolog ChangeLog
			====================

VERSION 5.0.2
=============

  * ADDED: library(time) to the clib package, providing alarm and timeout
    functions.  Works on Unix systems having setitimer() as well as on
    Windows using Multi Media timers.

  * ADDED: PL_handle_signal() to handle synchronous interrupts from foreign
    code.  Option PL_SIGSYNC to PL_signal() to schedule synchronous
    interrupts.

  * FIXED: Try to be a bit more intelligent on the expansion of ~ (home)
    in the Windows versions by checking the various alternatives to be
    existing and writeable directories.  Now prefers %USERPROFILE% over
    %HOMEDRIVE%\%HOMEPATH%.  With help from Lee Sanders.

  * FIXED: PL_recorded_external() handling ground terms.  Spotted by
    Volker Wysk.

  * FIXED: Multi-threaded version: make sure the thread itself thinks
    it exists right from the start (Lyosha Ilyukhin).

  * ENHANCED rl_add_history/1 does not add a line to the history if it is
    the same as the last line added (Anjo Anjewierden).

  * FIXED: Errornous messages on recursively receiving (error) signals.

  * FIXED: Various issues in the GUI tracer, making the trace more
    intuitive, print pending exception-terms in the status window,
    and fix some source-location handling problems.

  * FIXED: when loading foreign libraries in `system mode', the loaded 
    predicates are available to the tracer as other built-in code.  This
    fixes tracing XPCE code.

  * ADDED: option qcompile to load_files/2.

  * ENHANCED: Replaced some more warnings with exceptions in pl-trace.c

  * PORT: Port to MacOS X (darwin), with help from Paulo Moura.
	- Various BSD enhancement to configure
	- Make plld aware of the -bundle -bundle_loader stuff
	- Deal with foreign symbols starting with a _
	- Resolve some macro conflicts
	- Various missing :: in Makefiles (needed on case-insensitive
	  filesystems like Mac HFS+)
